--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "url": "https://github.com/Ellie-Aghajani/munchieMaster/issues"
   },
   "homepage": "https://github.com/Ellie-Aghajani/munchieMaster#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "node-modules": "^1.0.1"
+  }
 }
