--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "config": "^3.3.11",
     "debug": "^4.3.4",
+    "mongoose": "^8.3.4",
     "node-modules": "^1.0.1"
   }
 }
