--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "debug": "^4.3.4",
     "fawn": "^2.1.5",
     "joi-objectid": "^4.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.3.4",
     "node-modules": "^1.0.1"
   }
