--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "homepage": "https://github.com/Ellie-Aghajani/munchieMaster#readme",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "config": "^3.3.11",
     "debug": "^4.3.4",
     "fawn": "^2.1.5",
     "joi-objectid": "^4.0.2",
+    "joi-password-complexity": "^5.2.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.3.4",
     "node-modules": "^1.0.1"
