--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fawn": "^2.1.5",
     "joi-objectid": "^4.0.2",
     "joi-password-complexity": "^5.2.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.3.4",
     "node-modules": "^1.0.1"
