--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.1.1",
     "config": "^3.3.11",
     "debug": "^4.3.4",
+    "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
     "joi-objectid": "^4.0.2",
     "joi-password-complexity": "^5.2.0",
