--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.3.4",
-    "node-modules": "^1.0.1"
+    "node-modules": "^1.0.1",
+    "winston": "^3.13.0"
   }
 }
