--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "bcrypt": "^5.1.1",
     "config": "^3.3.11",
     "debug": "^4.3.4",
-    "express-async-errors": "^3.1.1",
+    "express-async-errors": "^2.1.0",
     "fawn": "^2.1.5",
     "joi-objectid": "^4.0.2",
     "joi-password-complexity": "^5.2.0",
@@ -28,6 +28,8 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.3.4",
     "node-modules": "^1.0.1",
-    "winston": "^3.13.0"
+    "require": "^2.4.20",
+    "winston": "^2.4.7",
+    "winston-mongodb": "^3.0.2"
   }
 }
