--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "repository": {
     "type": "git",
@@ -31,5 +31,8 @@
     "require": "^2.4.20",
     "winston": "^2.4.7",
     "winston-mongodb": "^3.0.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
