--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.3.4",
+    "multer": "^1.4.5-lts.1",
     "node-modules": "^1.0.1",
     "require": "^2.4.20",
     "winston": "^2.4.7",
