--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "config": "^3.3.11",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
+    "dotenv": "^16.4.5",
     "express-async-errors": "^2.1.0",
     "fawn": "^2.1.5",
     "helmet": "^7.1.0",
